@@ -1,4 +1,14 @@
 
+Tue Mar 16 14:01:18 2004  Amogh Kavimandan  <amoghk@dre.vanderbilt.edu>
+
+  * examples/Advanced/ch_21/client.cpp
+  * examples/Advanced/ch_21/server.cpp
+  * examples/Advanced/ch_21/server.h
+  * examples/Advanced/ch_21/icp.cpp
+  * examples/Advanced/ch_21/icp.h
+
+    Added min() function for vc6.0 so that this example compiles.
+
 Tue Mar 16 13:51:18 2004  Amogh Kavimandan  <amoghk@dre.vanderbilt.edu>
 
   * examples/Advanced/ch_18/client.cpp
